@@ -1,9 +1,16 @@
+2013-06-20  Uros Bizjak  <ubizjak@gmail.com>
+
+	* config/fpu-387.h (_FPU_MASK_ALL): New.
+	(set_fpu): Use fstcw to store x87 FPU control word. Use fnclex to
+	clear stalled exception flags.  Correctly clear stalled SSE
+	exception flags.  Simplify code.
+
 2013-06-20  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/57633
 	* io/list_read.c (next_char, eat_separator): Don't set EOL for \r.
 
-2012-06-19  Uros Bizjak  <ubizjak@gmail.com>
+2013-06-19  Uros Bizjak  <ubizjak@gmail.com>
 
 	* config/fpu-387.h: Use __asm__ and __volatile__ consistently.
 	(get_fpu_except_flags): Initialize result.
